--- a/Duole/AndroidManifest.xml
+++ b/Duole/AndroidManifest.xml
@@ -14,6 +14,7 @@
 			android:label="@string/app_name"></activity>
 		<activity android:name=".player.MusicPlayerActivity"
 			android:label="@string/app_name"></activity>
+		<activity android:name=".activity.SystemConfigActivity" android:label="@string/app_name" />
 
 		<service android:name=".service.BackgroundRefreshService" />
 
