--- a/trunk/Duole/AndroidManifest.xml
+++ b/trunk/Duole/AndroidManifest.xml
@@ -15,7 +15,7 @@
 		<activity android:name=".player.MusicPlayerActivity"
 			android:label="@string/app_name"></activity>
 		<activity android:name=".activity.SystemConfigActivity" android:label="@string/app_name" />
-
+		<activity android:name=".activity.PasswordActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Dialog"/>
 		<service android:name=".service.BackgroundRefreshService" />
 
 		<receiver android:name=".receiver.BootCompleteReceiver">
@@ -61,4 +61,5 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest> 
