--- a/trunk/Duole/AndroidManifest.xml
+++ b/trunk/Duole/AndroidManifest.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.duole" android:versionCode="1" android:versionName="1.0">
-	<application android:icon="@drawable/icon" android:label="@string/app_name"
+	<application android:icon="@drawable/icon" android:label="@string/app_name" android:sharedUserId="android.uid.system"
 		android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-		<activity android:name="Duole" android:label="@string/app_name">
+		<activity android:name="Duole" android:label="@string/app_name"
+			android:screenOrientation="landscape">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
+				<category android:name="android.intent.category.HOME" />
+				<category android:name="android.intent.category.DEFAULT"/>
 			</intent-filter>
 		</activity>
 
 		<activity android:name=".player.FlashPlayerActivity"
-			android:label="@string/app_name"></activity>
+			android:label="@string/app_name" android:screenOrientation="landscape"></activity>
 		<activity android:name=".player.MusicPlayerActivity"
-			android:label="@string/app_name"></activity>
-		<activity android:name=".activity.SystemConfigActivity" android:label="@string/app_name" />
-		<activity android:name=".activity.PasswordActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Dialog"/>
+			android:label="@string/app_name" android:screenOrientation="landscape"></activity>
+		<activity android:name=".activity.SystemConfigActivity"
+			android:label="@string/app_name" android:screenOrientation="landscape" />
+		<activity android:name=".activity.PasswordActivity"
+			android:label="@string/app_name" android:theme="@android:style/Theme.Dialog"
+			android:screenOrientation="landscape" />
+		<activity android:name=".activity.CheckUpdateActivity"
+			android:screenOrientation="landscape" android:theme="@android:style/Theme.Dialog" />
 		<service android:name=".service.BackgroundRefreshService" />
 
 		<receiver android:name=".receiver.BootCompleteReceiver">
@@ -62,4 +69,5 @@
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.INSTALL_PACKAGES" />
 </manifest> 
