--- a/trunk/Duole/AndroidManifest.xml
+++ b/trunk/Duole/AndroidManifest.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.duole" android:versionCode="1" android:versionName="1.0">
-	<application android:icon="@drawable/icon" android:label="@string/app_name" android:sharedUserId="android.uid.system"
-		android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+	<application android:icon="@drawable/icon" android:label="@string/app_name"
+		android:sharedUserId="android.uid.system" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 		<activity android:name="Duole" android:label="@string/app_name"
 			android:screenOrientation="landscape">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
- 				<category android:name="android.intent.category.HOME" />
-				<category android:name="android.intent.category.DEFAULT"/>
+				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 
@@ -23,6 +22,8 @@
 			android:screenOrientation="landscape" />
 		<activity android:name=".activity.CheckUpdateActivity"
 			android:screenOrientation="landscape" android:theme="@android:style/Theme.Dialog" />
+		<activity android:name=".player.SingleMusicPlayerActivity"
+			android:label="@string/app_name" android:screenOrientation="landscape" />
 		<service android:name=".service.BackgroundRefreshService" />
 		<service android:name=".service.UnLockScreenService" />
 
@@ -71,4 +72,5 @@
 	<uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INSTALL_PACKAGES" />
+	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
 </manifest> 
