--- a/PriorityRes/AndroidManifest.xml
+++ b/PriorityRes/AndroidManifest.xml
@@ -9,16 +9,19 @@
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name"
+        android:name=".util.PRApplication"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
             android:label="@string/app_name"
-            android:name=".PriorityResActivity" android:screenOrientation="landscape">
+            android:name=".PriorityResActivity"
+            android:screenOrientation="landscape" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PRWordActivity" />
     </application>
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
