--- a/PriorityRes/AndroidManifest.xml
+++ b/PriorityRes/AndroidManifest.xml
@@ -1,27 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.duole.priorityres"
+    package="com.duole.pres"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="8" />
 
     <application
+        android:name=".util.PRApplication"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:name=".util.PRApplication"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
-            android:label="@string/app_name"
             android:name=".PriorityResActivity"
+            android:label="@string/app_name"
             android:screenOrientation="landscape" >
-            <intent-filter >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PRWordActivity" />
+        <activity
+            android:name=".PRWordActivity"
+            android:screenOrientation="landscape" >
+        </activity>
+        
+        <activity
+            android:name=".PResViewActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="duole/pres" />
+            </intent-filter>
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
