--- a/SetupWizard/AndroidManifest.xml
+++ b/SetupWizard/AndroidManifest.xml
@@ -8,24 +8,25 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
+            android:name=".SetupWizardMainActivity"
             android:label="@string/app_name"
-            android:name=".SetupWizardMainActivity" >
-            <intent-filter >
+            android:screenOrientation="landscape" >
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
 
                 <data android:mimeType="duole/setup" />
             </intent-filter>
         </activity>
         <activity
+            android:name=".RegisterUserActivity" android:windowSoftInputMode="stateHidden|adjustResize"
             android:label="@string/app_name"
-            android:name=".RegisterUserActivity" >
+            android:screenOrientation="landscape" >
         </activity>
-        
     </application>
 
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
